Bug 52449 - nouveau_vbo_t.c compilation broken due to implicit declaration
Summary: nouveau_vbo_t.c compilation broken due to implicit declaration
Status: CLOSED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/nouveau (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: Nouveau Project
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-24 16:20 UTC by Joe Konno
Modified: 2012-07-24 16:49 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Joe Konno 2012-07-24 16:20:55 UTC
Looks like the glformats.c work has resulted in a broken build. This is what I get when building 7e18a039ee7a402bac4882ae793824d6523061fa:

libtool: compile:  gcc -DPACKAGE_NAME=\"Mesa\" -DPACKAGE_TARNAME=\"mesa\" -DPACKAGE_VERSION=\"8.1.0\" "-DPACKAGE_STRING=\"Mesa 8.1.0\"" "-DPACKAGE_BUGREPORT=\"https://bugs.freedesktop.org/enter_bug.cgi?product=Mesa\"" -DPACKAGE_URL=\"\" -DPACKAGE=\"mesa\" -DVERSION=\"8.1.0\" -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_STRINGS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DHAVE_DLFCN_H=1 -DLT_OBJDIR=\".libs/\" -DYYTEXT_POINTER=1 -DHAVE_LIBEXPAT=1 -DHAVE_LIBXCB_DRI2=1 -I. -I../../../../../include -I../../../../../src/ -I../../../../../src/mapi -I../../../../../src/mesa/ -I../../../../../src/mesa/drivers/dri/common -D_GNU_SOURCE -DPTHREADS -DUSE_X86_64_ASM -DHAVE_POSIX_MEMALIGN -DIN_DRI_DRIVER -DUSE_XCB -DGLX_INDIRECT_RENDERING -DGLX_DIRECT_RENDERING -DUSE_EXTERNAL_DXTN_LIB=1 -DIN_DRI_DRIVER -DHAVE_ALIAS -DHAVE_MINCORE -DHAVE_LIBUDEV -DHAVE_LLVM=0x0209 -DFEATURE_GL=1 -DFEATURE_ES2=1 -I/home/joe/wayland/install/include -I/home/joe/wayland/install/include/libdrm -I/home/joe/wayland/install/include/nouveau -g -O2 -Wall -std=c99 -Werror=implicit-function-declaration -Werror=missing-prototypes -fno-strict-aliasing -fno-builtin-memcmp -g -O2 -MT nv10_state_fb.lo -MD -MP -MF .deps/nv10_state_fb.Tpo -c nv10_state_fb.c  -fPIC -DPIC -o .libs/nv10_state_fb.o
In file included from nv10_render.c:199:0:
nouveau_vbo_t.c: In function 'get_array_stride':
nouveau_vbo_t.c:48:3: error: implicit declaration of function '_mesa_sizeof_type' [-Werror=implicit-function-declaration]
cc1: some warnings being treated as errors
make[6]: *** [nv10_render.lo] Error 1
Comment 1 Brian Paul 2012-07-24 16:34:04 UTC
Fixed in commmit 1f9239ec8d67c3e8ee64e6f5306499b6d97ea136.
Comment 2 Joe Konno 2012-07-24 16:49:09 UTC
Thanks Brian! Build now succeeds as of the commit you specified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.