nouveau: include glformats.h to get missing prototype

Fixes http://bugs.freedesktop.org/show_bug.cgi?id=52449